--- a/app/src/main/res/layout/activity_create_new.xml
+++ b/app/src/main/res/layout/activity_create_new.xml
@@ -58,6 +58,14 @@
 
             </RelativeLayout>
 
+            <Button
+                android:id="@+id/StartTutorialButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/barrel_color_2"
+                android:text="@string/Start_Brew" />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
