--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,100 +2,115 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="422dp"
+        android:layout_height="730dp"
+        android:background="@drawable/barrel_background_2"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fondamento"
+            android:paddingTop="23dp"
+            android:paddingBottom="23dp"
+            android:text="@string/main_welcome_text"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/Beer_Launcher_background"
+            android:textColorLink="#000000"
+            android:textSize="40sp"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/barrel_background_2"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:contentDescription="@string/separator"
+            android:paddingTop="20dp"
+            app:srcCompat="@drawable/separator" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fondamento"
-                android:paddingTop="23dp"
-                android:paddingBottom="23dp"
-                android:text="@string/main_welcome_text"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/Beer_Launcher_background"
-                android:textColorLink="#000000"
-                android:textSize="40sp"
-                android:visibility="visible" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fondamento"
+            android:paddingTop="23dp"
+            android:paddingBottom="10dp"
+            android:text="@string/main_updates_text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp" />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/barrel_color"
-                android:fontFamily="@font/fondamento"
-                android:shadowColor="@color/colorPrimaryDark"
-                android:shadowDx="20"
-                android:shadowDy="20"
-                android:text="@string/main_create_beer"
-                android:textColor="@color/Beer_Launcher_background"
-                android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/main_updates"
+            android:textSize="40sp" />
 
-            <ImageView
-                android:id="@+id/imageView"
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/separator"
+            android:paddingTop="20dp"
+            app:srcCompat="@drawable/separator" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/barrel_color"
+            android:fontFamily="@font/fondamento"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowDx="20"
+            android:shadowDy="20"
+            android:text="@string/main_create_beer"
+            android:textColor="@color/Beer_Launcher_background"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fondamento"
+            android:paddingTop="23dp"
+            android:paddingBottom="10dp"
+            android:text="@string/main_current_text"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/separator"
-                android:paddingTop="20dp"
-                app:srcCompat="@drawable/separator" />
+                android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fondamento"
-                android:paddingTop="23dp"
-                android:paddingBottom="10dp"
-                android:text="@string/main_updates_text"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="30sp" />
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/main_current_beers"
+                    android:textSize="33sp" />
 
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/main_updates"
-                android:textSize="40sp" />
+            </LinearLayout>
+        </ScrollView>
 
-            <ImageView
-                android:id="@+id/imageView3"
-                app:srcCompat="@drawable/separator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/separator"
-                android:paddingTop="20dp" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fondamento"
-                android:paddingTop="23dp"
-                android:paddingBottom="10dp"
-                android:text="@string/main_current_text"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/main_current_beers"
-                android:textSize="33sp" />
-
-        </LinearLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
