--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,102 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="461dp"
+        android:layout_height="682dp"
+        android:background="@drawable/barrel_background_2"
+        android:gravity="center_horizontal|top"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="170dp"
+            android:contentDescription="@string/user_profile_name"
+            android:padding="25dp"
+            app:srcCompat="@drawable/blank_profile" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="461dp"
+            android:layout_height="wrap_content"
+            android:text="@string/user_profile_info"
+            android:textAlignment="center"
+            android:textSize="45sp" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="229dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="0dp"
+            android:text="@string/user_profile_name"
+            android:textAlignment="center"
+            android:textSize="40sp" />
+
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/barrel_background_2"
-            android:gravity="center_horizontal|top"
-            android:orientation="vertical">
+            android:contentDescription="@string/separator"
+            android:paddingTop="20dp"
+            app:srcCompat="@drawable/separator" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:fontFamily="@font/fondamento"
+            android:paddingTop="23dp"
+            android:paddingBottom="10dp"
+            android:text="@string/main_current_text"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp" />
 
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:contentDescription="@string/user_profile_name"
-                    android:padding="25dp"
-                    app:srcCompat="@drawable/blank_profile" />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/main_current_beers"
+            android:textAlignment="center"
+            android:textSize="33sp" />
 
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="20dp"
-                    android:text="@string/user_profile_name"
-                    android:textSize="40sp" />
-            </LinearLayout>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/separator"
+            android:paddingTop="20dp"
+            app:srcCompat="@drawable/separator" />
 
-            <TextView
-                android:id="@+id/textView14"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/user_profile_info"
-                android:textSize="50sp" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/fondamento"
+            android:paddingTop="15dp"
+            android:paddingBottom="10dp"
+            android:text="@string/user_profile_finished_text"
+            android:textColor="@color/Beer_Launcher_background"
+            android:textSize="30sp" />
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/separator"
-                android:paddingTop="20dp"
-                app:srcCompat="@drawable/separator" />
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fondamento"
-                android:paddingTop="23dp"
-                android:paddingBottom="10dp"
-                android:text="@string/main_current_text"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="30sp" />
-
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/main_current_beers"
-                android:textSize="33sp" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/separator"
-                android:paddingTop="20dp"
-                app:srcCompat="@drawable/separator" />
-
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/fondamento"
-                android:paddingTop="20dp"
-                android:paddingBottom="10dp"
-                android:text="@string/user_profile_finished_text"
-                android:textColor="@color/Beer_Launcher_background"
-                android:textSize="30sp" />
+        <ScrollView
+            android:layout_width="460dp"
+            android:layout_height="52dp">
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/user_profile_finished_beers"
+                android:textAlignment="center"
                 android:textSize="38sp" />
+        </ScrollView>
 
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
